[project]
name = "vyper-language-server"
version = "0.2.1"
description = "Language server for Vyper, a pythonic smart contract language"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["language-server", "lsp", "vyper"]
dependencies = [
  "lark>=1.1.7,<2.0.0",
  "lsprotocol>=2023.0.1,<2024.0.0",
  "packaging>=23.1.0",
  "pygls>=1.3.1,<2.0.0",
  "vyper>=0.4.1,<0.5.0",
]

[project.scripts]
vyper-language-server = "vyper_language_server.main:main"

[dependency-groups]
dev = [
  "coverage>=7.6.9",
  "pre-commit>=3.5.0,<4.0",
  "pytest>=8.0",
  "ruff>=0.8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["vyper_language_server"]
omit = [
  "vyper_language_server/__init__.py",
  "vyper_language_server/__main__.py"
]
